# workout-generator

./: Dockerfile  README.md  docker-compose.yml  index.js  package-lock.json  pyproject.toml
.github/workflows/: wf.yml
workoutplans/: manage.py
workoutplans/workoutapp/: apps.py  urls.py  views.py
workoutplans/workoutapp/static/css/: style.css
workoutplans/workoutapp/static/js/: nfp.js  script.js  table.js
workoutplans/workoutapp/templates/: full_body_1.html  index.html  legs_workout.html
workoutplans/workoutapp/workout_templates/components/: nfp_exercises.js  nfp_interface.js  nfp_interface.ts
workoutplans/workoutapp/workout_templates/pgm4_nfp/: full_body_1.html
workoutplans/workoutplans/: asgi.py  settings.py  urls.py  wsgi.py
